cf_analysis_results/checkerframework_results/urlaf656038a0_Salihan04_MOBLIMA_tgz-pJ8-com_moblima_util_dataTestJ8.txt
../../../../datasets/june2020_dataset/urlaf656038a0_Salihan04_MOBLIMA_tgz-pJ8-com_moblima_util_dataTestJ8/src/com/moblima/util/showTimeReadtest.java:163: error: (required.method.not.called) $$ 4 $$ method close $$ fop $$ java.io.FileOutputStream $$ possible exceptional exit due to file.createNewFile() with exception type java.io.IOException $$ ( 5338, 5388 ) $$ @MustCall method close may not have been invoked on fop or any of its aliases.
			FileOutputStream fop = new FileOutputStream(file);
			                 ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: possible exceptional exit due to file.createNewFile() with exception type java.io.IOException
../../../../datasets/june2020_dataset/urlaf656038a0_Salihan04_MOBLIMA_tgz-pJ8-com_moblima_util_dataTestJ8/src/com/moblima/util/showTimeReadtest.java:186: error: (required.method.not.called) $$ 4 $$ method close $$ fop $$ java.io.FileOutputStream $$ possible exceptional exit due to file.createNewFile() with exception type java.io.IOException $$ ( 5750, 5800 ) $$ @MustCall method close may not have been invoked on fop or any of its aliases.
			FileOutputStream fop = new FileOutputStream(file);
			                 ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: possible exceptional exit due to file.createNewFile() with exception type java.io.IOException
../../../../datasets/june2020_dataset/urlaf656038a0_Salihan04_MOBLIMA_tgz-pJ8-com_moblima_util_dataTestJ8/src/com/moblima/dataaccess/SerializeDB.java:63: error: (required.method.not.called) $$ 4 $$ method close $$ fout $$ java.io.FileOutputStream $$ possible exceptional exit due to new ObjectOutputStream(fout) with exception type java.io.IOException $$ ( 1670, 1725 ) $$ @MustCall method close may not have been invoked on fout or any of its aliases.
			FileOutputStream fout = new FileOutputStream(fileName);
			                 ^
  The type of object is: java.io.FileOutputStream.
  Reason for going out of scope: possible exceptional exit due to new ObjectOutputStream(fout) with exception type java.io.IOException
../../../../datasets/june2020_dataset/urlaf656038a0_Salihan04_MOBLIMA_tgz-pJ8-com_moblima_util_dataTestJ8/src/com/moblima/dataaccess/SerializeDB.java:64: error: (required.method.not.called) $$ 4 $$ method close $$ oos $$ java.io.ObjectOutputStream $$ possible exceptional exit due to oos.writeObject(cineplexes) with exception type java.io.IOException $$ ( 1729, 1783 ) $$ @MustCall method close may not have been invoked on oos or any of its aliases.
			ObjectOutputStream oos = new ObjectOutputStream(fout);
			                   ^
  The type of object is: java.io.ObjectOutputStream.
  Reason for going out of scope: possible exceptional exit due to oos.writeObject(cineplexes) with exception type java.io.IOException
../../../../datasets/june2020_dataset/urlaf656038a0_Salihan04_MOBLIMA_tgz-pJ8-com_moblima_util_dataTestJ8/src/com/moblima/dataaccess/SerializeDB.java:131: error: (required.method.not.called) $$ 4 $$ method close $$ fin $$ java.io.FileInputStream $$ possible exceptional exit due to fin.available() with exception type java.io.IOException $$ ( 3457, 3509 ) $$ @MustCall method close may not have been invoked on fin or any of its aliases.
				FileInputStream fin = new FileInputStream(fileName);
				                ^
  The type of object is: java.io.FileInputStream.
  Reason for going out of scope: possible exceptional exit due to fin.available() with exception type java.io.IOException
../../../../datasets/june2020_dataset/urlaf656038a0_Salihan04_MOBLIMA_tgz-pJ8-com_moblima_util_dataTestJ8/src/com/moblima/dataaccess/SerializeDB.java:133: error: (required.method.not.called) $$ 4 $$ method close $$ ois $$ java.io.ObjectInputStream $$ regular method exit $$ ( 3545, 3596 ) $$ @MustCall method close may not have been invoked on ois or any of its aliases.
					ObjectInputStream ois = new ObjectInputStream(fin);
					                  ^
  The type of object is: java.io.ObjectInputStream.
  Reason for going out of scope: regular method exit
Note: ../../../../datasets/june2020_dataset/urlaf656038a0_Salihan04_MOBLIMA_tgz-pJ8-com_moblima_util_dataTestJ8/src/com/moblima/businesslogic/TicketPriceBL.java uses or overrides a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: ../../../../datasets/june2020_dataset/urlaf656038a0_Salihan04_MOBLIMA_tgz-pJ8-com_moblima_util_dataTestJ8/src/com/moblima/dataaccess/SerializeDB.java uses unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
6 errors
